--- a/portfolio simple.html
+++ b/portfolio simple.html
@@ -1,77 +1,11 @@
 <!DOCTYPE html>
 <html>    
 <main>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
-    <style>
-        #name-bar{
-            padding: 10px;
-            margin-top: 0px;
-            background: dodgerblue;
-        }
-        #name-text{
-            color: #ffffffec;
-            font-family:'Metal Mania', cursive;
-            text-shadow: 1px 1px rgb(0, 0, 0);
-            letter-spacing: 5px;
-            font-size: 30px;
-            text-decoration: none;
-            text-align: center
-        }
-        #nav-bar{
-            padding: 10px;
-            position: fixed;
-            top: 0px;
-            left: 900px;
-            width: 100%;
-        }
-        .container{
-            width: 80%;
-            margin: 0 auto;
-        }
-        body{
-            color: white;
-            font-family: Open Sans, monospace;
-            background: rgb(0, 0, 0);
-            text-indent: 10px;
-            margin: 0px;
-        }
-        nav ul{
-            margin: 5px;
-            padding: 5px 0px 5px 30px;
-        }
-        nav li{
-            display: inline;
-            margin-right: 20px;
-        }
-        a{
-            color: #FF8D1E;
-            text-decoration: none;
-            text-shadow: 1px 0 10px rgb(0, 0, 0);
-        }
-        h3{
-            letter-spacing: 5px;
-            width: 90%;
-            margin: 0 auto;
-            color: #FF8D1E
-        }
-        p{
-            width: 80%;
-            margin: 0 auto;
-            font-family: Open Sans, monospace;
-        }
-        footer{
-            color:rgb(0, 0, 0);
-            text-shadow: 0.5px 0.5px rgb(0, 0, 0);
-            padding: 10px;
-            margin-top: 0px;
-            background: dodgerblue;
-            text-align: center;
-            font-size: 12px;
-        }
-    </style>
        <head>
+           <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="portfolio-style.css">
             <title>
                 Kevin's Portfolio
             </title>
