--- a/portfolio simple.html
+++ b/portfolio simple.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>    
-<main>
+    <main>
        <head>
-           <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" href="portfolio-style.css">
+            <link rel="preconnect" href="https://fonts.gstatic.com">
+            <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+            <link rel="stylesheet" href="portfolio-style.css">
             <title>
                 Kevin's Portfolio
             </title>
@@ -14,9 +14,7 @@
                     KEVIN PONCE PALOS
                 </div>
             </div>
-            <!-- <img src="#" />
-            https://drive.google.com/thumbnail?id=
-            -->
+            <!-- <img src="#" /> -->
        </head>
        <body>
             <header id="nav-bar">
