--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             <link rel="preconnect" href="https://fonts.gstatic.com">
             <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
-            <link rel="stylesheet" href="portfolio-style.css">
+            <link rel="stylesheet" href="index.css">
             <title>
                 Kevin's Portfolio
             </title>
