--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>    
     <main>
        <head>
+            <link rel="preconnect" href="https://fonts.gstatic.com">
+            <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
             <link rel="stylesheet" href="https://kevin-poncepalos.github.io/css/portfolio_style.css">
             <title>
                 Kevin's Portfolio
