--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>    
     <main>
        <head>
+            <link rel="stylesheet" href="https://kevin-poncepalos.github.io/css/portfolio_style.css">
             <title>
                 Kevin's Portfolio
             </title>
