--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html>    
     <main>
        <head>
-            <link rel="stylesheet" href="https://kevin-poncepalos.github.io/css/portfolio_style.css">
+            <!--
+            <link rel="preconnect" href="https://fonts.gstatic.com">
+            <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+            -->
+            <link rel="stylesheet" href="W:\0Documents\2 Coding\WEBAGE\portfolio\css\portfolio_style.css">
             <title>
                 Kevin's Portfolio
             </title>
@@ -60,7 +65,7 @@
        </body>
        <footer>
            <strong>
-            &copy; Copyright 2021
+                &copy; Copyright 2021
            </strong>
        </footer> 
     </main>
