--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
             -->
-            <link rel="stylesheet" href="kevin-poncepalos.github.io/css/portfolio_style.css">
+            <link rel="stylesheet" href="https://kevin-poncepalos.github.io/css/portfolio_style.css">
             <title>
                 Kevin's Portfolio
             </title>
