--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
             -->
             <link rel="stylesheet" href="https://kevin-poncepalos.github.io/css/portfolio_style.css">
+             
             <title>
                 Kevin's Portfolio
             </title>
@@ -29,38 +30,31 @@
                         </strong>
                     </ul>
                 </nav>
-            </header>
+            </header><br>
             <h3 id='Projects'>Projects</h3>
                 <p>
-                    Projects Project Projects Projects Projects Project Projects Projects
-                    Projects Project Projects Projects Projects Project Projects Projects
-                    Projects Project Projects Projects Projects Project Projects Projects
-                    Projects Project Projects Projects Projects Project Projects Projects
-                    Projects Project Projects Projects Projects Project Projects Projects
-                    Projects Project Projects Projects Projects Project Projects Projects
-                </p>
-           <h3 id="About">Who or What am I ???</h3>
+                    <ul id='link-text'>
+                        <a target="_blank" href="https://github.com/2Kbummer/data-to-image"> Data Behind an Image (py)</a>
+                        <a id='link-text' target="_blank" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io"> This website</a>
+                        <a id='link-text' target="_blank" href="https://github.com/2Kbummer/snake-game"> Snake Game (c++)</a>
+                    </ul>
+                </p><br>
+            <h3 id="About">Who or What am I ???</h3>
                 <p>
-                    About Me About Me About Me About Me About Me About Me About Me About Me 
-                    About Me About Me About Me About Me About Me About Me About Me About Me 
-                    About Me About Me About Me About Me About Me About Me About Me About Me
-                    About Me About Me About Me About Me About Me About Me About Me About Me 
-                    About Me About Me About Me About Me About Me About Me About Me About Me 
-                    About Me About Me About Me About Me About Me About Me About Me About Me
-                    About Me About Me About Me About Me About Me About Me About Me About Me 
-                    About Me About Me About Me About Me About Me About Me About Me About Me 
-                    About Me About Me About Me About Me About Me About Me About Me About Me
-                    About Me About Me About Me About Me About Me About Me About Me About Me 
-                    About Me About Me About Me About Me About Me About Me About Me  
-                </p>
-           <h3 id="Contact">Contact Me!</h3>
+                    Well first I want to say that I love coding and science. I am a biologist with work experience
+                    in molecular diagnostics, but I can not stop thinking about coding! Ever since I saw 
+                    <a target="_blank" href="https://deepmind.com/alphago-korea"> Google's deep mind beat Lee Sedol at GO/baduk</a>
+                    I became facinated with A.I. and nueral networks. I started to learn C++, then web development, and finally got
+                    into Python and I love it! I have barely touched the waters of programming, but I want to dive deep into machine
+                    learning, even if something that I do in my spare time.
+                </p><br>
+            <h3 id="Contact">Contact Me!</h3>
                 <p>
-                    Contact Me Contact Me Contact Me Contact Me Contact Me Contact Me Contact Me
-                    Contact Me Contact Me Contact Me Contact Me Contact Me Contact Me Contact Me
-                    Contact Me Contact Me Contact Me Contact Me Contact Me Contact Me Contact Me
-                    Contact Me Contact Me Contact Me Contact Me Contact Me Contact Me Contact Me
-                    Contact Me Contact Me Contact Me Contact Me Contact Me Contact Me Contact Me
-                    Contact Me Contact Me Contact Me Contact Me Contact Me Contact Me Contact Me
+                    <ul id='link-text'>
+                        <a target="_blank" href="https://github.com/2Kbummer"> Github</a>
+                        <a id='link-text' target="_blank" href="https://www.linkedin.com/in/kevin-poncepalos/"> Linkedin</a>
+                        <a id='link-text' target="_blank" href="https://twitter.com/ai_kev"> Twitter</a>
+                    </ul>
                 </p>
        </body>
        <footer>
