--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <a target="_blank" href="https://deepmind.com/alphago-korea"> Google's deep mind beat Lee Sedol at GO/baduk</a>
                     I became facinated with A.I. and nueral networks. I started to learn C++, then web development, and finally got
                     into Python and I love it! I have barely touched the waters of programming, but I want to dive deep into machine
-                    learning, even if something that I do in my spare time.
+                    learning, even if its something that I do in my spare time 😁.
                 </p><br>
             <h3 id="Contact">Contact Me!</h3>
                 <p>
