--- a/index.html
+++ b/index.html
@@ -2,21 +2,23 @@
 <html>    
     <main>
        <head>
-            <!--
-            <link rel="preconnect" href="https://fonts.gstatic.com">
-            <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
-            <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
-            -->
-            <link rel="stylesheet" href="https://kevin-poncepalos.github.io/css/portfolio_style.css">
+           
+           <!--
+           <link rel="preconnect" href="https://fonts.gstatic.com">
+           <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
+           <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+           -->
+           <link rel="stylesheet" href="https://kevin-poncepalos.github.io/css/portfolio_style.css">
+           <link rel="shortcut icon" href="https://kevin-poncepalos.github.io/images/favicon.ico">
              
-            <title>
-                Kevin's Portfolio
-            </title>
-            <div id="name-bar">
-                <div id="name-text">
-                    KEVIN PONCE PALOS
-                </div>
-            </div>
+           <title>
+               Kevin's Portfolio
+           </title>
+           <div id="name-bar">
+               <div id="name-text">
+                   KEVIN PONCE PALOS
+               </div>
+           </div>
             <!-- <img src="#" /> -->
        </head>
        <body>
