--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
            <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
            -->
            <link rel="stylesheet" href="https://kevin-poncepalos.github.io/css/portfolio_style.css">
-           <link rel="shortcut icon" href="https://kevin-poncepalos.github.io/images/favicon.ico?v=1">
-             
+           <link rel="icon" type="image/x-icon" href="images/favicon.ico?v=1" />
+           <link rel="icon" href="favicon.ico" type="image/x-icon" />
+           <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+           
            <title>
                Kevin's Portfolio
            </title>
