--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
        </body>
        <footer>
            <strong>
-                &copy; Copyright 2021
+                Copyright &copy; 2021 kevin-poncepalos
            </strong>
        </footer> 
     </main>
