--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
             <!-- <img src="#" /> -->
        </head>
        <body>
-            <header id="nav-bar">
+            <header>
+                <!-- previous <nav> location-->
+            </header>
+            <div id="nav-bar">
                 <nav>
                     <ul>
                         <strong>
@@ -34,7 +37,7 @@
                         </strong>
                     </ul>
                 </nav>
-            </header><br>
+            </div><br>
             <h3 id='Projects'>Projects</h3>
                 <p>
                     <ul id='link-text'>
