--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                 </p><br>
             <h3 id="About">Who or What am I ???</h3>
                 <p>
-                    Well first I want to say that I love coding and science. I am a biologist with work experience
-                    in molecular diagnostics, but I can not stop thinking about coding! Ever since I saw 
-                    <a target="_blank" href="https://deepmind.com/alphago-korea"> Google's deep mind beat Lee Sedol at GO/baduk</a>
-                    I became facinated with A.I. and neural networks. I started to learn C++, then web development, and finally got
-                    into Python and I love it! I have barely touched the waters of programming, but I want to dive deep into machine
+                    Well first, I want to say that I love coding and science. I am a biologist with work experience
+                    in molecular diagnostics, but I can't stop thinking about coding! Ever since I saw 
+                    <a target="_blank" href="https://deepmind.com/alphago-korea"> Google's deep mind beat Lee Sedol at GO/baduk</a>,
+                    I became facinated with A.I. and neural networks. I started to learn C++, then web development, and then got
+                    into Python, and I love it! I barely touched the waters of programming, but I want to dive deep into machine
                     learning, even if its something that I do in my spare time 😁.
                 </p><br>
             <h3 id="Contact">Contact Me!</h3>
