--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h3 id='Projects'>Projects</h3>
                 <p>
                     <ul id='link-text'>
-                        <a target="_blank" href="https://github.com/2Kbummer/data-to-image"> Data Behind an Image (py)</a>
+                        <a target="_blank" href="https://github.com/2Kbummer/data-to-image"> Data to Gradient Images (py)</a>
                         <a id='link-text' target="_blank" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io"> This website</a>
                         <a id='link-text' target="_blank" href="https://github.com/2Kbummer/snake-game"> Snake Game (c++)</a>
                     </ul>
