--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
             <!-- <img src="#" /> -->
        </head>
        <body>
-            <header>
-                <!-- previous <nav> location-->
-            </header>
-            <div id="nav-bar">
+            <header id="nav-bar">
                 <nav>
                     <ul>
                         <strong>
@@ -36,7 +33,7 @@
                         </strong>
                     </ul>
                 </nav>
-            </div><br>
+            </header><br>
             <h3 id='Projects'>Projects</h3>
                 <p>
                     <ul id='link-text'>
