--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h3 id='Projects'>Projects</h3>
                 <p>
                     <ul id='link-text'>
-                        <a target="_blank" href="https://github.com/2Kbummer/data-to-image"> Data as Colored Gradient Image (Py)</a>
+                        <a target="_blank" href="https://github.com/2Kbummer/data-to-image"> Data as a Colored Gradient Image (Py)</a>
                         <a id='link-text' target="_blank" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io"> This website</a>
                         <a id='link-text' target="_blank" href="https://github.com/2Kbummer/snake-game"> Snake Game (c++)</a>
                     </ul>
