--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <p>
                     <ul id='link-text'>
                         <a target="_blank" href="https://github.com/2Kbummer/data-to-image"> Data Sets as Colored Gradient Images (Py)</a>
-                        <a id='link-text' target="_blank" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io"> This website</a>
-                        <a id='link-text' target="_blank" href="https://github.com/2Kbummer/snake-game"> Snake Game (c++)</a>
+                        <a id='link-text' target="_blank" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io"> This Website</a>
+                        <a id='link-text' target="_blank" href="https://github.com/2Kbummer/snake-game"> Snake Game (C++)</a>
                     </ul>
                 </p><br>
             <h3 id="About">Who or What am I ???</h3>
