--- a/index.html
+++ b/index.html
@@ -2,23 +2,22 @@
 <html>    
     <main>
        <head>
-           <!-- font html links
-           <link rel="preconnect" href="https://fonts.gstatic.com">
-           <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
-           <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
-           -->
-           <link rel="stylesheet" href="https://kevin-poncepalos.github.io/css/portfolio_style.css">
-           <link rel="icon" type="image/x-icon" href="images/favicon.ico?v=1" />
-           <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-       
-           <title>
-               Kevin's Portfolio
-           </title>
-           <div id="name-bar">
-               <div id="name-text">
-                   KEVIN PONCE PALOS
-               </div>
-           </div>
+            <!--
+            <link rel="preconnect" href="https://fonts.gstatic.com">
+            <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+            -->
+            <link rel="stylesheet" href="https://kevin-poncepalos.github.io/css/portfolio_style.css">
+            <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+            <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+            <title>
+                Kevin's Portfolio
+            </title>
+            <div id="name-bar">
+                <div style="text-align: center;">
+                    <a id="name-text" href="https://kevin-poncepalos.github.io"> KEVIN PONCE PALOS </a>
+                </div>
+            </div>
             <!-- <img src="#" /> -->
        </head>
        <body>
@@ -33,15 +32,27 @@
                     </ul>
                 </nav>
             </header><br>
-            <h3 id='Projects'>Projects</h3>
+            
+            <h3 id='Projects'>PROJECTS</h3>
                 <p>
                     <ul id='link-text'>
-                        <a target="_blank" href="https://github.com/2Kbummer/data-to-image"> Data Sets as Colored Gradient Images (Py)</a>
-                        <a id='link-text' target="_blank" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io"> This Website</a>
-                        <a id='link-text' target="_blank" href="https://github.com/2Kbummer/snake-game"> Snake Game (C++)</a>
+                        <a href="https://github.com/2Kbummer/data-to-image" target="_blank">
+                            <img alt="Project Screenshot" src="https://kevin-poncepalos.github.io/images/Data_image_bars.jpg"
+                            width="205" height="110">
+                        <a href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank">
+                            <img id='link-text' alt="Project Screenshot" src="https://kevin-poncepalos.github.io/images/website.jpg"
+                            width="150" height="110">
+                        <a href="https://github.com/2Kbummer/snake-game" target="_blank">
+                            <img id='snake-text' alt="Project Screenshot" src="https://kevin-poncepalos.github.io/images/snake-game.jpg"
+                            width="75" height="110">
+                    </ul>
+                    <ul id='link-text'>
+                        <a href="https://github.com/2Kbummer/data-to-image" target="_blank"> Data Sets as Colored Gradient Images (Py)</a>
+                        <a id='link-text' href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank"> This Website</a>
+                        <a id='link-text' href="https://github.com/2Kbummer/snake-game" target="_blank"> Snake Game (C++)</a>
                     </ul>
                 </p><br>
-            <h3 id="About">Who or What am I ???</h3>
+            <h3 id="About">WHO OR WHAT AM I ???</h3>
                 <p>
                     Well first, I want to say that I love coding and science. I am a biologist with work experience
                     in molecular diagnostics, but I can't stop thinking about coding! Ever since I saw 
@@ -50,18 +61,25 @@
                     into Python, and I love it! I barely touched the waters of programming, but I want to dive deep into machine
                     learning, even if its something that I do in my spare time 😁.
                 </p><br>
-            <h3 id="Contact">Contact Me!</h3>
+            <h3 id="Contact">CONTACT ME!</h3>
                 <p>
-                    <ul id='link-text'>
-                        <a target="_blank" href="https://github.com/2Kbummer"> Github</a>
-                        <a id='link-text' target="_blank" href="https://www.linkedin.com/in/kevin-poncepalos/"> Linkedin</a>
-                        <a id='link-text' target="_blank" href="https://twitter.com/ai_kev"> Twitter</a>
+                    <ul style="text-align: center;" id="Contact">
+                        <a href="https://github.com/2Kbummer" target="_blank">
+                            <img alt="github logo" src="https://kevin-poncepalos.github.io/images/github-logo.png"
+                            width="50" height="50">
+                        <a href="https://www.linkedin.com/in/kevin-poncepalos/" target="_blank">
+                            <img id='link-text' alt="linkedin logo" src="https://kevin-poncepalos.github.io/images/linkdin-logo.png"
+                            width="50" height="50">
+                        <a href="https://twitter.com/ai_kev" target="_blank">
+                            <img id='link-text' alt="twitter logo" src="https://kevin-poncepalos.github.io/images/twitter-logo.png"
+                            width="50" height="50">
                     </ul>
                 </p>
-       </body>
+       </body><br><br>
        <footer>
            <strong>
-                Copyright &copy; 2021 kevin-poncepalos
+                <a href="https://docs.github.com/en/github/creating-cloning-and-archiving-repositories/creating-a-repository-on-github/licensing-a-repository#searching-github-by-license-type">
+                    Copyright &copy; 2021 kevin-poncepalos </a>
            </strong>
        </footer> 
     </main>
