--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                             <img alt="Project Screenshot" src="https://kevin-poncepalos.github.io/images/Data_image_bars.jpg"
                             width="205" height="110">
                         <a href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank">
-                            <img id='link-text' alt="Project Screenshot" src="https://kevin-poncepalos.github.io/images/website.jpg"
+                            <img id='link-text' alt="Project Screenshot" src="https://kevin-poncepalos.github.io/images/website.JPG"
                             width="150" height="110">
                         <a href="https://github.com/2Kbummer/snake-game" target="_blank">
-                            <img id='snake-text' alt="Project Screenshot" src="https://kevin-poncepalos.github.io/images/snake-game.jpg"
+                            <img id='snake-text' alt="Project Screenshot" src="https://kevin-poncepalos.github.io/images/snake-game.JPG"
                             width="75" height="110">
                     </ul>
                     <ul id='link-text'>
