--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
             -->
-            <link rel="stylesheet" href="https://kevin-poncepalos.github.io/css/portfolio_style.css">
+            <link rel="stylesheet" href="css\portfolio_style.css">
             <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
             <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
             <title>
@@ -15,7 +15,7 @@
             </title>
             <div id="name-bar">
                 <div style="text-align: center;">
-                    <a id="name-text" href="https://kevin-poncepalos.github.io"> KEVIN PONCE PALOS </a>
+                    <a id="name-text" href="https://kevin-poncepalos.github.io/"> KEVIN PONCE PALOS </a>
                 </div>
             </div>
             <!-- <img src="#" /> -->
@@ -36,23 +36,24 @@
             <h3 id='Projects'>PROJECTS</h3>
                 <p>
                     <ul id='link-text'>
-                        <a href="https://github.com/2Kbummer/data-to-image" target="_blank">
-                            <img alt="Project Screenshot" src="https://kevin-poncepalos.github.io/images/Data_image_bars.jpg"
+                        <a style="text-decoration: none;" href="https://github.com/2Kbummer/data-to-image" target="_blank">
+                            <img alt="Project Screenshot" src="images\Data_image_bars.jpg"
                             width="205" height="110">
-                        <a href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank">
-                            <img id='link-text' alt="Project Screenshot" src="https://kevin-poncepalos.github.io/images/website.JPG"
-                            width="150" height="110">
-                        <a href="https://github.com/2Kbummer/snake-game" target="_blank">
-                            <img id='snake-text' alt="Project Screenshot" src="https://kevin-poncepalos.github.io/images/snake-game.JPG"
+                        <a style="text-decoration: none;" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank">
+                            <img id='link-text' alt="Project Screenshot" src="images\website.JPG"
+                            width="205" height="110">
+                        <a style="text-decoration: none;" href="https://github.com/2Kbummer/snake-game" target="_blank">
+                            <img id='link-text' alt="Project Screenshot" src="images\snake-game.JPG"
                             width="75" height="110">
                     </ul>
                     <ul id='link-text'>
-                        <a href="https://github.com/2Kbummer/data-to-image" target="_blank"> Data Sets as Colored Gradient Images (Py)</a>
+                        <a style="color: white;"href="https://github.com/2Kbummer/data-to-image" target="_blank"> Data Sets as Colored Gradient Images (Py)</a>
                         <a id='link-text' href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank"> This Website</a>
                         <a id='link-text' href="https://github.com/2Kbummer/snake-game" target="_blank"> Snake Game (C++)</a>
                     </ul>
-                </p><br><br>
-            <h3 id="About">WHO OR WHAT AM I ???</h3>
+                </p>
+                <br><br><br>
+            <h3 id="About"> WHO OR WHAT AM I ??? </h3>
                 <p>
                     Well first, I want to say that I love coding and science. I am a biologist with work experience
                     in molecular diagnostics, but I can't stop thinking about coding! Ever since I saw 
@@ -60,18 +61,19 @@
                     I became facinated with A.I. and neural networks. I started to learn C++, then web development, and then got
                     into Python, and I love it! I barely touched the waters of programming, but I want to dive deep into machine
                     learning, even if its something that I do in my spare time 😁.
-                </p><br><br>
-            <h3 id="Contact">CONTACT ME!</h3>
+                </p>
+                <br><br><br>
+            <h3 id="Contact"> </h3>
                 <p>
-                    <ul style="text-align: center;" id="Contact">
-                        <a href="https://github.com/2Kbummer" target="_blank">
-                            <img alt="github logo" src="https://kevin-poncepalos.github.io/images/github-logo.png"
+                    <ul id="Contact">
+                        <a style="text-decoration: none;" href="https://github.com/2Kbummer" target="_blank">
+                            <img alt="github logo" src="images\github-logo.png"
                             width="50" height="50">
-                        <a href="https://www.linkedin.com/in/kevin-poncepalos/" target="_blank">
-                            <img id='link-text' alt="linkedin logo" src="https://kevin-poncepalos.github.io/images/linkdin-logo.png"
+                        <a style="text-decoration: none;" href="https://www.linkedin.com/in/kevin-poncepalos/" target="_blank">
+                            <img id='link-text' alt="linkedin logo" src="images\linkdin-logo.jpg"
                             width="50" height="50">
                         <a href="https://twitter.com/ai_kev" target="_blank">
-                            <img id='link-text' alt="twitter logo" src="https://kevin-poncepalos.github.io/images/twitter-logo.png"
+                            <img id='link-text' alt="twitter logo" src="images\twitter-logo.png"
                             width="50" height="50">
                     </ul>
                 </p>
