--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     learning, even if its something that I do in my spare time 😁.
                 </p>
                 <br><br><br>
-            <h3 id="Contact"> </h3>
+            <h3 id="Contact"> CONTACT ME ! </h3>
                 <p>
                     <ul id="Contact">
                         <a style="text-decoration: none;" href="https://github.com/2Kbummer" target="_blank">
