--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <br><br><br>
             <h3 id="Contact"> CONTACT ME ! </h3>
                 <p>
-                    <ul id="Contact">
+                    <ul id="link-text">
                         <a style="text-decoration: none;" href="https://github.com/2Kbummer" target="_blank">
                             <img alt="github logo" src="images\github-logo.png"
                             width="50" height="50">
