--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>
             Kevin's Portfolio
@@ -12,12 +12,12 @@
         <link rel="stylesheet" href="css/portfolio_style.css">
         <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
         <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+        
         <div id="name-bar">
             <div style="text-align: center;">
                 <a id="name-text" href="https://kevin-poncepalos.github.io/"> KEVIN PONCE PALOS </a>
             </div>
         </div>
-        <!-- <img src="#" /> -->
     </head>
     <body>
         <header id="nav-bar">
@@ -29,63 +29,64 @@
                 </ul>
             </nav>
         </header><br>
-        
         <h3 id='Projects'>PROJECTS</h3>
             <p>
                 <ul class="list-format">
-                    <a style="text-decoration: none;" href="https://github.com/2Kbummer/data-to-image" target="_blank">
-                        <img alt="Project Screenshot" src="images\Data_image_bars.jpg"
-                        width="205" height="110">
-                    </a>
-                    <a style="text-decoration: none;" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank">
-                        <img class="list-format" alt="Project Screenshot" src="images\website.JPG"
-                        width="205" height="110">
-                    </a>
-                    <a style="text-decoration: none;" href="https://github.com/2Kbummer/snake-game" target="_blank">
-                        <img class="list-format" alt="Project Screenshot" src="images\snake-game.JPG"
-                        width="75" height="110">
-                    </a>
+                    <li class="nodec">
+                        <a href="https://github.com/2Kbummer/data-to-image" target="_blank">
+                            <img alt="Project Screenshot" src="images\Data_image_bars.jpg"
+                            width="205" height="110">
+                        </a>
+                        <a href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank">
+                            <img class="list-format" alt="Project Screenshot" src="images\website.JPG"
+                            width="205" height="110">
+                        </a>
+                        <a href="https://github.com/2Kbummer/snake-game" target="_blank">
+                            <img class="list-format" alt="Project Screenshot" src="images\snake-game.JPG"
+                            width="75" height="110">
+                        </a>
+                    </li>
                 </ul>
                 <ul class="list-format">
-                    <a style="color: white;" href="https://github.com/2Kbummer/data-to-image" target="_blank"> Data Sets as Colored Gradient Images (Py)</a>
-                    <a class="list-format" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank"> This Website</a>
-                    <a class="list-format" href="https://github.com/2Kbummer/snake-game" target="_blank"> Snake Game (C++)</a>
+                    <li class="nodec">
+                        <a style="color: white;" href="https://github.com/2Kbummer/data-to-image" target="_blank"> Data Sets as Colored Gradient Images (Py)</a>
+                        <a class="list-format" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank"> This Website</a>
+                        <a class="list-format" href="https://github.com/2Kbummer/snake-game" target="_blank"> Snake Game (C++)</a>
+                    </li>
                 </ul>
-            </p>
-            <br><br><br>
+            </p><br><br><br>
         <h3 id="About"> WHO OR WHAT AM I ??? </h3>
             <p>
                 Well first, I want to say that I love coding and science. I am a biologist with work experience
                 in molecular diagnostics, but I can't stop thinking about coding! Ever since I saw 
-                <a target="_blank" href="https://deepmind.com/alphago-korea"> Google's deep mind beat Lee Sedol at GO/baduk </a>,
+                <a target="_blank" href="https://deepmind.com/alphago-korea"> Google's deep mind beat Lee Sedol at GO/baduk</a>,
                 I became facinated with A.I. and neural networks. I started to learn C++, then web development, and then got
-                into Python, and I love it! I have barely touched the waters of programming, but I want to dive deep into machine
+                into Python, and I love it! I barely touched the waters of programming, but I want to dive deep into machine
                 learning, even if its something that I do in my spare time 😁.
-            </p>
-            <br><br><br>
+            </p><br><br><br>
         <h3 id="Contact"> CONTACT ME! </h3>
             <p>
                 <ul class="list-format">
-                    <a style="text-decoration: none;" href="https://github.com/2Kbummer" target="_blank">
-                        <img alt="github logo" src="images\github-logo.png"
-                        width="50" height="50">
-                    </a>
-                    <a style="text-decoration: none;" href="https://www.linkedin.com/in/kevin-poncepalos/" target="_blank">
-                        <img class="list-format" alt="linkedin logo" src="images\linkdin-logo.jpg"
-                        width="50" height="50">
-                    </a>
-                    <a href="https://twitter.com/ai_kev" target="_blank">
-                        <img class="list-format" alt="twitter logo" src="images\twitter-logo.png"
-                        width="50" height="50">
-                    </a>
+                    <li class="nodec">
+                        <a href="https://github.com/2Kbummer" target="_blank">
+                            <img alt="github logo" src="images\github-logo.png"
+                            width="50" height="50">
+                        </a>
+                        <a href="https://www.linkedin.com/in/kevin-poncepalos/" target="_blank">
+                            <img class="list-format" alt="linkedin logo" src="images\linkdin-logo.jpg"
+                            width="50" height="50">
+                        </a>
+                        <a href="https://twitter.com/ai_kev" target="_blank">
+                            <img class="list-format" alt="twitter logo" src="images\twitter-logo.png"
+                            width="50" height="50">
+                        </a>
+                    </li>
                 </ul>
             </p>
     </body><br><br>
     <footer>
-        <strong>
-            <a href="https://docs.github.com/en/github/creating-cloning-and-archiving-repositories/creating-a-repository-on-github/licensing-a-repository#searching-github-by-license-type">
-                Copyright &copy; 2021 kevin-poncepalos
-            </a>
-        </strong>
+        <a href="https://docs.github.com/en/github/creating-cloning-and-archiving-repositories/creating-a-repository-on-github/licensing-a-repository#searching-github-by-license-type">
+            Copyright &copy; 2021 kevin-poncepalos
+        </a>
     </footer> 
 </html>
