--- a/index.html
+++ b/index.html
@@ -47,13 +47,11 @@
                         </a>
                     </li>
                 </ul>
-                <ul class="list-format">
-                    <li class="nodec">
-                        <a style="color: white;" href="https://github.com/2Kbummer/data-to-image" target="_blank"> Data Sets as Colored Gradient Images (Py)</a>
-                        <a class="list-format" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank"> This Website</a>
-                        <a class="list-format" href="https://github.com/2Kbummer/snake-game" target="_blank"> Snake Game (C++)</a>
-                    </li>
-                </ul>
+                <div class="list-format">
+                    <a style="color: white;" href="https://github.com/2Kbummer/data-to-image" target="_blank"> Data Sets as Colored Gradient Images (Py)</a>
+                    <a class="list-format" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank"> This Website</a>
+                    <a class="list-format" href="https://github.com/2Kbummer/snake-game" target="_blank"> Snake Game (C++)</a>
+                </div>
             </p><br><br><br>
         <h3 id="About"> WHO OR WHAT AM I ??? </h3>
             <p>
