--- a/index.html
+++ b/index.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en">    
     <head>
         <title>
             Kevin's Portfolio
         </title>
-        <!--
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
-        -->
-        <link rel="stylesheet" href="css/portfolio_style.css">
+        <link rel="stylesheet" href="css\portfolio_style.css">
         <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-        
-        <div id="name-bar">
-            <div style="text-align: center;">
+        <div>
+            <div id="name-bar">
                 <a id="name-text" href="https://kevin-poncepalos.github.io/"> KEVIN PONCE PALOS </a>
             </div>
         </div>
@@ -23,34 +16,34 @@
         <header id="nav-bar">
             <nav>
                 <ul>
-                    <li><a href="#Projects">Projects</a></li>
-                    <li><a href="#About">About</a></li>
-                    <li><a href="#Contact">Contact</a></li>
+                    <li><a href="#Projects"> Projects </a></li>
+                    <li><a href="#About"> About </a></li>
+                    <li><a href="#Contact"> Contact </a></li>
                 </ul>
             </nav>
         </header><br>
-        <h3 id='Projects'>PROJECTS</h3>
+        <h3 id='Projects'> PROJECTS </h3>
             <p>
-                <ul class="list-format">
-                    <li class="nodec">
-                        <a href="https://github.com/2Kbummer/data-to-image" target="_blank">
-                            <img alt="Project Screenshot" src="images\Data_image_bars.jpg"
-                            width="205" height="110">
+                <ul>
+                    <li class="a_format">
+                        <a class="a_format" href="https://github.com/2Kbummer/data-to-image" target="_blank">
+                            <img class="a_format" alt="Project Screenshot" src="images\Data_image_bars.jpg"
+                            style="width: 15rem; height: 6rem;">
                         </a>
-                        <a href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank">
-                            <img class="list-format" alt="Project Screenshot" src="images\website.JPG"
-                            width="205" height="110">
+                        <a class="a_format" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank">
+                            <img class="a_format" alt="Project Screenshot" src="images\website.JPG"
+                            style="width: 15rem; height: 6rem;">
                         </a>
-                        <a href="https://github.com/2Kbummer/snake-game" target="_blank">
-                            <img class="list-format" alt="Project Screenshot" src="images\snake-game.JPG"
-                            width="75" height="110">
+                        <a class="a_format" href="https://github.com/2Kbummer/snake-game" target="_blank">
+                            <img class="a_format" alt="Project Screenshot" src="images\snake-game.JPG"
+                            style="width: 6rem; height: 6rem;">
                         </a>
                     </li>
                 </ul>
-                <div class="list-format">
-                    <a style="color: white;" href="https://github.com/2Kbummer/data-to-image" target="_blank"> Data Sets as Colored Gradient Images (Py)</a>
-                    <a class="list-format" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank"> This Website</a>
-                    <a class="list-format" href="https://github.com/2Kbummer/snake-game" target="_blank"> Snake Game (C++)</a>
+                <div class="project-text">
+                    <a class="project-text" href="https://github.com/2Kbummer/data-to-image" target="_blank"> Data Sets as Colored Gradient Images (Py)</a>
+                    <a class="project-text" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank"> This Website</a>
+                    <a class="project-text" href="https://github.com/2Kbummer/snake-game" target="_blank"> Snake Game (C++)</a>
                 </div>
             </p><br><br><br>
         <h3 id="About"> WHO OR WHAT AM I ??? </h3>
@@ -59,32 +52,34 @@
                 in molecular diagnostics, but I can't stop thinking about coding! Ever since I saw 
                 <a target="_blank" href="https://deepmind.com/alphago-korea"> Google's deep mind beat Lee Sedol at GO/baduk</a>,
                 I became facinated with A.I. and neural networks. I started to learn C++, then web development, and then got
-                into Python, and I love it! I have barely touched the waters of programming, but I want to dive deep into machine
+                into Python, and I love it! I barely touched the waters of programming, but I want to dive deep into machine
                 learning, even if its something that I do in my spare time 😁.
             </p><br><br><br>
         <h3 id="Contact"> CONTACT ME! </h3>
             <p>
-                <ul class="list-format">
-                    <li class="nodec">
-                        <a href="https://github.com/2Kbummer" target="_blank">
-                            <img alt="github logo" src="images\github-logo.png"
-                            width="50" height="50">
+                <ul>
+                    <li>
+                        <a class="a_format" href="https://github.com/2Kbummer" target="_blank">
+                            <img class="a_format" alt="github logo" src="images\github-logo.png"
+                            style="width: 4rem; height: 4rem;">
                         </a>
-                        <a href="https://www.linkedin.com/in/kevin-poncepalos/" target="_blank">
-                            <img class="list-format" alt="linkedin logo" src="images\linkdin-logo.jpg"
-                            width="50" height="50">
+                        <a class="a_format" href="https://www.linkedin.com/in/kevin-poncepalos/" target="_blank">
+                            <img class="a_format" alt="linkedin logo" src="images\linkdin-logo.jpg"
+                            style="width: 4rem; height: 4rem;">
                         </a>
-                        <a href="https://twitter.com/ai_kev" target="_blank">
-                            <img class="list-format" alt="twitter logo" src="images\twitter-logo.png"
-                            width="50" height="50">
+                        <a class="a_format" href="https://twitter.com/ai_kev" target="_blank">
+                            <img class="a_format" alt="twitter logo" src="images\twitter-logo.png"
+                            style="width: 4rem; height: 4rem;">
                         </a>
                     </li>
                 </ul>
             </p>
     </body><br><br>
     <footer>
-        <a href="https://docs.github.com/en/github/creating-cloning-and-archiving-repositories/creating-a-repository-on-github/licensing-a-repository#searching-github-by-license-type">
-            Copyright &copy; 2021 kevin-poncepalos
-        </a>
-    </footer> 
+        <strong>
+            <a href="https://docs.github.com/en/github/creating-cloning-and-archiving-repositories/creating-a-repository-on-github/licensing-a-repository#searching-github-by-license-type">
+                Copyright &copy; 2021 kevin-poncepalos
+            </a>
+        </strong>
+    </footer>
 </html>
