--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>
             Kevin's Portfolio
         </title>
-        <link rel="stylesheet" href="css\portfolio_style.css">
+        <link rel="stylesheet" href="css/portfolio_style.css">
         <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
         <div>
             <div id="name-bar">
@@ -27,15 +27,15 @@
                 <ul>
                     <li class="a_format">
                         <a class="a_format" href="https://github.com/2Kbummer/data-to-image" target="_blank">
-                            <img class="a_format" alt="Project Screenshot" src="images\Data_image_bars.jpg"
+                            <img class="a_format" alt="Project Screenshot" src="images/Data_image_bars.jpg"
                             style="width: 15rem; height: 6rem;">
                         </a>
                         <a class="a_format" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank">
-                            <img class="a_format" alt="Project Screenshot" src="images\website.JPG"
+                            <img class="a_format" alt="Project Screenshot" src="images/website.JPG"
                             style="width: 10rem; height: 6rem;">
                         </a>
                         <a class="a_format" href="https://github.com/2Kbummer/snake-game" target="_blank">
-                            <img class="a_format" alt="Project Screenshot" src="images\snake-game.jpg"
+                            <img class="a_format" alt="Project Screenshot" src="images/snake-game.JPG"
                             style="width: 6rem; height: 6rem;">
                         </a>
                     </li>
@@ -44,8 +44,8 @@
                     <a class="project-text" href="https://github.com/2Kbummer/data-to-image" target="_blank"> Data Sets as Colored Gradient Images (Py)</a>
                     <a class="project-text" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank"> This Website</a>
                     <a class="project-text" href="https://github.com/2Kbummer/snake-game" target="_blank"> Snake Game (C++)</a>
-                </div>
-            </p><br><br><br>
+                </div><br><br><br>
+            </p>
         <h3 id="About"> WHO OR WHAT AM I ??? </h3>
             <p>
                 Well first, I want to say that I love coding and science. I am a biologist with work experience
@@ -69,17 +69,17 @@
                         </a>
                         <a class="a_format" href="https://twitter.com/ai_kev" target="_blank">
                             <img class="a_format" alt="twitter logo" src="images\twitter-logo.png"
-                            style="width: 4rem; height: 4rem;">
+                            style="width: 4rem; height: 4rem;"><br><br><br>
                         </a>
                     </li>
                 </ul>
             </p>
-    </body><br><br>
-    <footer>
-        <strong>
-            <a href="https://docs.github.com/en/github/creating-cloning-and-archiving-repositories/creating-a-repository-on-github/licensing-a-repository#searching-github-by-license-type">
-                Copyright &copy; 2021 kevin-poncepalos
-            </a>
-        </strong>
-    </footer>
+        <footer>
+            <strong>
+                <a href="https://docs.github.com/en/github/creating-cloning-and-archiving-repositories/creating-a-repository-on-github/licensing-a-repository#searching-github-by-license-type">
+                    Copyright &copy; 2021 kevin-poncepalos
+                </a>
+            </strong>
+        </footer>
+    </body>
 </html>
