--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             style="width: 10rem; height: 6rem;">
                         </a>
                         <a class="a_format" href="https://github.com/2Kbummer/snake-game" target="_blank">
-                            <img class="a_format" alt="Project Screenshot" src="images/snake-game.JPG"
+                            <img class="a_format" alt="Project Screenshot" src="images/snake-game.jpg"
                             style="width: 6rem; height: 6rem;">
                         </a>
                     </li>
