--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">    
+<html lang="en">
     <head>
         <title>
             Kevin's Portfolio
@@ -60,15 +60,15 @@
                 <ul>
                     <li>
                         <a class="a_format" href="https://github.com/2Kbummer" target="_blank">
-                            <img class="a_format" alt="github logo" src="images\github-logo.png"
+                            <img class="a_format" alt="github logo" src="images/github-logo.png"
                             style="width: 4rem; height: 4rem;">
                         </a>
                         <a class="a_format" href="https://www.linkedin.com/in/kevin-poncepalos/" target="_blank">
-                            <img class="a_format" alt="linkedin logo" src="images\linkdin-logo.jpg"
+                            <img class="a_format" alt="linkedin logo" src="images/linkdin-logo.jpg"
                             style="width: 4rem; height: 4rem;">
                         </a>
                         <a class="a_format" href="https://twitter.com/ai_kev" target="_blank">
-                            <img class="a_format" alt="twitter logo" src="images\twitter-logo.png"
+                            <img class="a_format" alt="twitter logo" src="images/twitter-logo.png"
                             style="width: 4rem; height: 4rem;"><br><br><br>
                         </a>
                     </li>
