--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>
             Kevin's Portfolio
         </title>
+        <meta charset="UTF-8" />
         <link rel="stylesheet" href="css/portfolio_style.css">
         <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     </head>
@@ -22,7 +23,7 @@
                 </ul>
             </nav>
         </header><br>
-        <h3 id='Projects'> PROJECTS </h3>
+        <h1 id='Projects'> PROJECTS </h1>
             <ul>
                 <li class="a_format">
                     <a class="a_format" href="https://github.com/2Kbummer/data-to-image" target="_blank">
@@ -44,7 +45,7 @@
                 <a class="project-text" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank"> This Website</a>
                 <a class="project-text" href="https://github.com/2Kbummer/snake-game" target="_blank"> Snake Game (C++)</a>
             </div><br><br><br>
-        <h3 id="About"> WHO OR WHAT AM I ??? </h3>
+        <h1 id="About"> WHO OR WHAT AM I ??? </h1>
             <p>
                 Well first, I want to say that I love coding and science. I am a biologist with work experience
                 in molecular diagnostics, but I can't stop thinking about coding! Ever since I saw 
@@ -53,7 +54,7 @@
                 into Python, and I love it! I barely touched the waters of programming, but I want to dive deep into machine
                 learning, even if its something that I do in my spare time 😁.
             </p><br><br><br>
-        <h3 id="Contact"> CONTACT ME! </h3>
+        <h1 id="Contact"> CONTACT ME! </h1>
             <ul>
                 <li>
                     <a class="a_format" href="https://github.com/2Kbummer" target="_blank">
