--- a/index.html
+++ b/index.html
@@ -74,9 +74,15 @@
         <footer>
             <strong>
                 <a href="https://docs.github.com/en/github/creating-cloning-and-archiving-repositories/creating-a-repository-on-github/licensing-a-repository#searching-github-by-license-type">
-                    Copyright &copy; 2021 kevin-poncepalos
+                    Copyright &copy; 2021 kevin-poncepalos. All rights reserved.
                 </a>
             </strong>
+            <div id="validator_box">
+                <a href="https://validator.w3.org/nu/?showsource=yes&showoutline=yes&doc=https%3A%2F%2Fkevin-poncepalos.github.io%2F" id="validator">
+                  <img src="images/HTML5_Logo_64.png"
+                       alt="Valid HTML 5" style="height:3rem; width:3rem; border:0" />
+                </a>
+            </div>
         </footer>
     </body>
 </html>
