--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <ul>
                 <li>
                     <a class="a_format" href="https://github.com/2Kbummer" target="_blank">
-                        <img class="a_format" alt="github logo" src="images/github-logo.png"
+                        <img class="a_format" alt="github logo" src="images/github-logo-arm.png"
                         style="width: 4rem; height: 4rem;">
                     </a>
                     <a class="a_format" href="https://www.linkedin.com/in/kevin-poncepalos/" target="_blank">
