--- a/index.html
+++ b/index.html
@@ -78,9 +78,8 @@
                 </a>
             </strong>
             <div id="validator_box">
-                <a href="https://validator.w3.org/nu/?showsource=yes&showoutline=yes&doc=https%3A%2F%2Fkevin-poncepalos.github.io%2F" id="validator">
-                  <img src="images/HTML5_Logo_64.png"
-                       alt="Valid HTML 5" style="height:3rem; width:3rem; border:0" />
+                <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fkevin-poncepalos.github.io%2F">
+                    <img src="images/HTML5_Logo_64.png" alt="Valid HTML 5" style="height:3rem; width:3rem;" />
                 </a>
             </div>
         </footer>
