--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 Well first, I want to say that I love coding and science. I am a biologist with work experience
                 in molecular diagnostics, but I can't stop thinking about coding! Ever since I saw 
                 <a target="_blank" href="https://deepmind.com/alphago-korea"> Google's deep mind beat Lee Sedol at GO/baduk</a>,
-                I became facinated with A.I. and neural networks. I started to learn C++, then web development, and then got
+                I became facinated with A.I. and neural networks. I learned C++, then web development, and then got
                 into Python, and I love it! I have barely touched the waters of programming, but I want to dive deep into machine
                 learning, even if its something that I do in my spare time 😁.
             </p><br><br><br>
